
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2024 JUN 18b
  * in model/chem/_Air_Plasma_11s/doc/report.tex, model/chem/_Air_Plasma_8s/doc/report.tex,
    model/chem/_N2_Plasma_4s/doc/report.tex
    - altered the spline control points of the N2+ + e- > N + N reaction part of the rodriguez2024
      model
  * in model/chem/_Air_Plasma_11s/rodriguez2024.c, model/chem/_Air_Plasma_11s/rodriguezpark2024.c,
    model/chem/_Air_Plasma_8s/rodriguez2024.c, model/chem/_N2_Plasma_4s/rodriguez2024.c
    - altered the spline control points of the N2+ + e- > N + N reaction part of the rodriguez2024
      model
      

2024 JUN 18a
  * in model/chem/_NH3_Plasma_32s/arakoni2007omprakas.c
    - fixed a bug which prevented compilation
    

2024 JUN 17a
  * in model/chem/_N2_Plasma_4s/rodriguez2024.c
    - removed implicit treatment of the Townsend ionization reaction
  * in model/chem/_NH3_Plasma_32s/arakoni2007omprakas.c
    - made changes to kf6 and kf12
    

2024 JUN 14d
  * in model/chem/_NH3_Plasma_32s/rodriguez2024.c
    - renamed a few functions and averagedrates call names
    

2024 JUN 14c
  * in model/chem/_C2H4_Air_Plasma_36s/doc/report.tex
    - updated the documentation so that it is in sync with the latest Adamovich solver
  * in model/chem/
    - added the chemical solver _N2_Plasma_8s()
    

2024 JUN 14b
  * in model/thermo/_generic/enthalpy.c
    - removed a comment within a comment that was introduced in 24jun12b


2024 JUN 14a
  * in model/chem/_NH3_Plasma_32s/rodriguez2024.c
    - fixed a bug in reaction 151
     

2024 JUN 13a
  * in model/transport/_Gupta-Yos/transport.c
    - added the option TRANSPORTMODEL_NONEQUILIBRIUMCORRECTED_ELECTRONMOBILITIESPARENTMACHERET
    

2024 JUN 12b
  * in model/chem/_NH3_Plasma_32s/Makefile