@@ -117,11 +117,6 @@ double _zetae_from_Te(double Te);
 
 double _dzetae_dTe_from_Te(double Te);
 
-void find_Te_from_EoverN(double Estar, double *Te);
-
-void find_dTe_dEoverN_from_EoverN(double Estar, double *dTedEstar);
-
-void find_EoverN_from_Te(double Te, double *EoverN);
 
 double _ionizationpot(long spec);
 
